# fincore

./: alembic.ini  codealike.json  config.py  main.py  pyproject.toml
app/authors/: models.py
app/books/: models.py
app/commons/: database.py
